--- a/.air.toml
+++ b/.air.toml
@@ -14,6 +14,7 @@ exclude_dir = [
     "testdata",
     "public",
     "internal/sqlcdb",
+    "cmd/app/sqlc",
 ]
 exclude_file = []
 exclude_regex = ["_test.go"]
