--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
         "tailwindcss": "^3.3.5"
     },
     "scripts": {
-        "tailwind": "tailwindcss -i 'styles.css' -o 'public/styles.css'"
+        "tailwind": "tailwindcss -i 'styles.css' -o 'cmd/app/public/styles.css'"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.7"
